made some modifications

--- a/index.html
+++ b/index.html
@@ -26,33 +26,31 @@
             </div>
             <form action="#">
                 <div>
-                    <i class="icon-error.svg"></i>
-                    <input type="text" placeholder="firstname" id="fname" required>
+                    <input type="text" placeholder="firstname" id="fname" required/>
                     <span></span>
                 </div>
                 <div>
-                    <i class="icon-error.svg"></i>
-                    <input type="text" placeholder="Last name" id="lname" required>
+                    <input type="text" placeholder="Last name" id="lname" required/>
                     <span></span>
                 </div>
                 <div>
-                    <i class="icon-error.svg"></i>
-                    <input type="email" placeholder="Email Address" id="email" required>
+                    <input type="email" placeholder="Email Address" id="email" required/>
                     <span></span>
                 </div>
                 <div>
-                    <i class="icon-error.svg"></i>
-                    <input type="password" placeholder="Password" id="passw" required>
+                    <input type="password" placeholder="Password" id="passw" required/>
                     <span></span>
                 </div>
                 <button type="button">claim your free trial</button>
                 <p class="terms">
                     by clicking this button you are agreeing to our <span>terms and services</span>
                 </p>
-            </form>
             </div>
+            </form>
         </section>
     </main>
+    
+    <script src="script.js"></script>
 </body>
 
 </html>
